--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "express": "4.16.4",
-    "socket.io": "2.1.1"
+    "socket.io": "^2.4.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
-    "nodemon": "1.18.4"
+    "nodemon": "^2.0.14"
   },
   "keywords": []
 }
